--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "cd frontend && npm install --only=dev && npm run build"
+    "heroku-postbuild": "cd frontend && npm install  && npm run build"
   },
   "engines": {
     "node": "10.15.1"
